# Gem-Game-Engine

./: CMakeLists.txt  README.md  install.py
demos/: texture.cpp
src/: main.cpp
src/Gem/: core.cpp  core.hpp  error.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  math.hpp  rlnamespace.hpp
